added Time_Sims_nonlin_testing_and_comment ipython notebook

--- a/orthogonality testing.ipynb
+++ b/orthogonality testing.ipynb
@@ -796,6 +796,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot all 3 together"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
