--- a/Time_Sims_nonlin_testing_and_comments.ipynb
+++ b/Time_Sims_nonlin_testing_and_comments.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "$$\n",
     "\\frac{d a}{dt}\n",
-    "=\\frac{\\partial H}{\\partial a^*} \\hspace{1in}\n",
+    "= i \\frac{\\partial H}{\\partial a^*} \\hspace{1in}\n",
     "\\frac{d a^*}{dt}\n",
-    "=\\frac{\\partial H}{\\partial a}.\n",
+    "=- i \\frac{\\partial H^*}{\\partial a}.\n",
     "$$\n",
     "\n",
     "Notice we will NOT observe squeezing because the simulation is purely classical. The two quadrants are related by a complex conjugate. In future tests, we will compute the squeezing spectrum for examples in Milburn's book to see if they match our computer model."
