made inputs to Hamiltonian more clear

--- a/Time_Sims_nonlin_testing_and_comments.ipynb
+++ b/Time_Sims_nonlin_testing_and_comments.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,10 @@
    "source": [
     "## Make Hamiltonian and equations of motion\n",
     "\n",
-    "ham = Hamiltonian.Hamiltonian(Ex.roots,modes,Ex.delays,0,0,0.1,1.,3,2,nonlin_coeff=0.)\n",
+    "ham = Hamiltonian.Hamiltonian(Ex.roots,modes,Ex.delays,\n",
+    "                              delay_indices = 0,start_nonlin = 0,duration_nonlin = 0.1,\n",
+    "                              indices_of_refraction = 1.,\n",
+    "                              chi_order = 3,photons_annihilated = 2,nonlin_coeff=0.)\n",
     "H = ham.make_H(-1j*A)\n",
     "eq_mot = ham.make_eq_motion()\n",
     "\n",
