replaced commutative symbols by bosonic opeartors. Classical equations of motion obtained by substituting with c-numbers

--- a/Testing_make_nonlinear_interaction.ipynb
+++ b/Testing_make_nonlinear_interaction.ipynb
@@ -57,11 +57,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gil/anaconda/lib/python2.7/site-packages/numpy/linalg/linalg.py:1776: RuntimeWarning: overflow encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "Roots.py:71: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "  A = q * f(x3) - q*(1.+q)*f(x2)+q**2.*f(x1)\n",
+      "Roots.py:72: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "  B = (2.*q+1.)*f(x3)-(1.+q)**2.*f(x2)+q**2.*f(x1)\n",
+      "Roots.py:73: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "  C = (1.+q)*f(x3)\n",
+      "Roots.py:75: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "  D1 = B+cm.sqrt(B**2-4.*A*C)\n",
+      "Roots.py:76: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "  D2 = B-cm.sqrt(B**2-4.*A*C)\n",
+      "/Users/gil/anaconda/lib/python2.7/site-packages/numpy/linalg/linalg.py:1776: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n"
+     ]
+    }
+   ],
    "source": [
     "Ex = Examples.Example3(r1 = 0.7, r3 = 0.7, max_linewidth=35.)\n",
     "Ex.run_Potapov()\n",
@@ -74,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "roots.sort(key = lambda z: z.imag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -93,31 +125,53 @@
     {
      "data": {
       "text/plain": [
-       "[(-1.2178438327806838-32.542503045139362j),\n",
-       " (-1.2178438327806846+32.542503045139362j),\n",
-       " (-1.2361423847570387+10.901754569501422j),\n",
-       " (-1.1431816829945924-1.669322534095661e-124j),\n",
-       " (-1.2361423847570385-10.901754569501421j),\n",
-       " (-1.1867857239576909+53.731290378625815j),\n",
-       " (-1.1714495298385854+40.60438955513678j),\n",
-       " (-1.1500606861696618+20.178105255320492j),\n",
-       " (-1.1867857239576904-53.731290378625815j),\n",
+       "[(-1.1867857239576904-53.731290378625815j),\n",
        " (-1.1714495298385854-40.60438955513678j),\n",
-       " (-1.1500606861696618-20.178105255320492j)]"
+       " (-1.2178438327806838-32.542503045139362j),\n",
+       " (-1.1500606861696618-20.178105255320492j),\n",
+       " (-1.2361423847570385-10.901754569501421j),\n",
+       " (-1.1431816829945924-1.669322534095661e-124j),\n",
+       " (-1.2361423847570387+10.901754569501422j),\n",
+       " (-1.1500606861696618+20.178105255320492j),\n",
+       " (-1.2178438327806846+32.542503045139362j),\n",
+       " (-1.1714495298385854+40.60438955513678j),\n",
+       " (-1.1867857239576909+53.731290378625815j)]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "roots"
+    " roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2.358235253796276-94.33567993376259j)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roots[0]+roots[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -128,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -150,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
