changed name of a module

--- a/Potapov_error_on_D_matrix.ipynb
+++ b/Potapov_error_on_D_matrix.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import Roots\n",
     "import Potapov\n",
-    "import Examples\n",
+    "import Time_Delay_Network\n",
     "import Time_Sims\n",
     "import functions\n",
     "import tests\n",
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "Ex = Examples.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=45.)\n",
+    "Ex = Time_Delay_Network.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=45.)\n",
     "Ex.run_Potapov()\n",
     "E = Ex.E\n",
     "roots = Ex.roots\n",
@@ -129,7 +129,7 @@
     "    if max_freq in Dic:\n",
     "        Ex = Dic[max_freq]\n",
     "    else:\n",
-    "        Ex = Examples.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=45.,max_freq=max_freq)\n",
+    "        Ex = Time_Delay_Network.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=45.,max_freq=max_freq)\n",
     "        Dic[max_freq] = Ex\n",
     "    Ex.run_Potapov()\n",
     "    E = Ex.E\n",
