--- a/Viewing_ABCD_matrices.ipynb
+++ b/Viewing_ABCD_matrices.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import Roots\n",
     "import Potapov\n",
-    "import Examples\n",
+    "import Time_Delay_Network\n",
     "import Time_Sims\n",
     "import functions\n",
     "import tests\n",
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "Ex = Examples.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=35.,max_freq=25.)\n",
+    "Ex = Time_Delay_Network.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=35.,max_freq=25.)\n",
     "Ex.run_Potapov()\n",
     "E = Ex.E\n",
     "roots = Ex.roots\n",
