--- a/orthogonality testing.ipynb
+++ b/orthogonality testing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
    "source": [
     "import Roots\n",
     "import Potapov\n",
-    "import Examples\n",
+    "import Time_Delay_Network\n",
     "import Time_Sims\n",
     "import functions\n",
     "import tests\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def run_example3(r1 = 0.999,r2=0.4, r3 = 0.999):\n",
-    "    Ex = Examples.Example3(r1=r1,r2=r2,r3=r3,max_freq=50.,max_linewidth=35.)\n",
+    "    Ex = Time_Delay_Network.Example3(r1=r1,r2=r2,r3=r3,max_freq=50.,max_linewidth=35.)\n",
     "    Ex.run_Potapov()\n",
     "    E = Ex.E\n",
     "    roots = Ex.roots\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -114,36 +114,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Examples.py:175: RuntimeWarning: overflow encountered in exp\n",
+      "Time_Delay_Network.py:194: RuntimeWarning: overflow encountered in exp\n",
+      "  E = lambda z: np.matrix([[np.exp(-tau1*z),0,0,0],\n",
+      "Time_Delay_Network.py:195: RuntimeWarning: overflow encountered in exp\n",
       "  [0,np.exp(-tau2*z),0,0],\n",
-      "Examples.py:177: RuntimeWarning: overflow encountered in exp\n",
+      "Time_Delay_Network.py:196: RuntimeWarning: overflow encountered in exp\n",
+      "  [0,0,np.exp(-tau3*z),0],\n",
+      "Time_Delay_Network.py:197: RuntimeWarning: overflow encountered in exp\n",
       "  [0,0,0,np.exp(-tau4*z)]])\n",
       "/Users/gil/anaconda/lib/python2.7/site-packages/numpy/linalg/linalg.py:1776: RuntimeWarning: invalid value encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
-      "Examples.py:174: RuntimeWarning: overflow encountered in exp\n",
-      "  E = lambda z: np.matrix([[np.exp(-tau1*z),0,0,0],\n",
-      "Examples.py:176: RuntimeWarning: overflow encountered in exp\n",
-      "  [0,0,np.exp(-tau3*z),0],\n",
-      "Roots.py:75: RuntimeWarning: overflow encountered in cdouble_scalars\n",
-      "  D1 = B+cm.sqrt(B**2-4.*A*C)\n",
-      "Roots.py:75: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
-      "  D1 = B+cm.sqrt(B**2-4.*A*C)\n",
-      "Roots.py:76: RuntimeWarning: overflow encountered in cdouble_scalars\n",
-      "  D2 = B-cm.sqrt(B**2-4.*A*C)\n",
-      "Roots.py:76: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
-      "  D2 = B-cm.sqrt(B**2-4.*A*C)\n",
       "/Users/gil/anaconda/lib/python2.7/site-packages/numpy/linalg/linalg.py:1776: RuntimeWarning: overflow encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
-      "Roots.py:71: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "Roots.py:79: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
       "  A = q * f(x3) - q*(1.+q)*f(x2)+q**2.*f(x1)\n",
-      "Roots.py:72: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "Roots.py:80: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
       "  B = (2.*q+1.)*f(x3)-(1.+q)**2.*f(x2)+q**2.*f(x1)\n",
-      "Roots.py:73: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "Roots.py:81: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
       "  C = (1.+q)*f(x3)\n",
-      "Roots.py:89: RuntimeWarning: overflow encountered in cdouble_scalars\n",
-      "  x = x3 - (x3-x2)*2.*C / D\n",
-      "Roots.py:89: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
-      "  x = x3 - (x3-x2)*2.*C / D\n"
+      "Roots.py:83: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "  D1 = B+cm.sqrt(B**2-4.*A*C)\n",
+      "Roots.py:84: RuntimeWarning: invalid value encountered in cdouble_scalars\n",
+      "  D2 = B-cm.sqrt(B**2-4.*A*C)\n",
+      "Roots.py:83: RuntimeWarning: overflow encountered in cdouble_scalars\n",
+      "  D1 = B+cm.sqrt(B**2-4.*A*C)\n",
+      "Roots.py:84: RuntimeWarning: overflow encountered in cdouble_scalars\n",
+      "  D2 = B-cm.sqrt(B**2-4.*A*C)\n"
      ]
     }
    ],
