--- a/Testing_make_nonlinear_interaction.ipynb
+++ b/Testing_make_nonlinear_interaction.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import Roots\n",
     "import Potapov\n",
-    "import Examples\n",
+    "import Time_Delay_Network\n",
     "import Time_Sims\n",
     "import functions\n",
     "import tests\n",
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "Ex = Examples.Example3(r1 = 0.7, r3 = 0.7, max_linewidth=35.)\n",
+    "Ex = Time_Delay_Network.Example3(r1 = 0.7, r3 = 0.7, max_linewidth=35.)\n",
     "Ex.run_Potapov()\n",
     "E = Ex.E\n",
     "roots = Ex.roots\n",
@@ -395,7 +395,7 @@
    },
    "outputs": [],
    "source": [
-    "Ex = Examples.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=35.,max_freq=25.)\n",
+    "Ex = Time_Delay_Network.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=35.,max_freq=25.)\n",
     "Ex.run_Potapov()\n",
     "E = Ex.E\n",
     "roots = Ex.roots\n",
