--- a/Time_Sims_nonlin_testing_and_comments.ipynb
+++ b/Time_Sims_nonlin_testing_and_comments.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "import Roots\n",
     "import Potapov\n",
-    "import Examples\n",
+    "import Time_Delay_Network\n",
     "import Time_Sims_nonlin\n",
     "import functions\n",
     "import tests\n",
@@ -97,7 +97,7 @@
    "source": [
     "## Make base system\n",
     "\n",
-    "Ex = Examples.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=15.,max_freq=25.)\n",
+    "Ex = Time_Delay_Network.Example3(r1 = 0.9, r3 = 0.9, max_linewidth=15.,max_freq=25.)\n",
     "Ex.run_Potapov()\n",
     "modes = functions.spatial_modes(Ex.roots,Ex.M1,Ex.E,Ex.delays)\n",
     "M = len(Ex.roots)\n",
