updated ipython notebooks

--- a/Time_Sims_nonlin_testing_and_comments.ipynb
+++ b/Time_Sims_nonlin_testing_and_comments.ipynb
@@ -102,9 +102,7 @@
     "modes = functions.spatial_modes(Ex.roots,Ex.M1,Ex.E,Ex.delays)\n",
     "M = len(Ex.roots)\n",
     "\n",
-    "A,B,C,D = Potapov.get_Potapov_ABCD(Ex.roots,Ex.vecs,Ex.T,z=0.)\n",
-    "A_d,C_d,D_d = map(Time_Sims_nonlin.double_up,(A,C,D))\n",
-    "B_d = -Time_Sims_nonlin.double_up(C.H)"
+    "A_d,B_d,C_d,D_d = Ex.get_Potapov_ABCD(doubled=True)"
    ]
   },
   {
@@ -117,13 +115,13 @@
    "source": [
     "## Make Hamiltonian and equations of motion\n",
     "\n",
-    "ham = Hamiltonian.Hamiltonian(Ex.roots,modes,Ex.delays)\n",
+    "ham = Hamiltonian.Hamiltonian(Ex.roots,modes,Ex.delays,Omega=-1j*A_d)\n",
     "\n",
     "ham.make_chi_nonlinearity(delay_indices=0,start_nonlin=0,\n",
     "                           length_nonlin=0.1,indices_of_refraction=1.,\n",
     "                           chi_order=3,chi_function=None,\n",
     "                           )\n",
-    "H = ham.make_H(-1j*A)\n",
+    "H = ham.make_H()\n",
     "eq_mot = ham.make_eq_motion()\n",
     "\n",
     "a_in = lambda t: np.asmatrix([1.]*np.shape(D_d)[-1]).T  ## make a sample input function\n",
