made comments in ipython notebook nicer

--- a/commensurate_roots.ipynb
+++ b/commensurate_roots.ipynb
@@ -120,12 +120,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 583,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## get gcd for a list of integers"
    ]
@@ -151,12 +147,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 582,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## testing"
    ]
@@ -228,12 +220,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 584,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## find the shortest commensurate delay"
    ]
@@ -255,12 +243,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## testing"
    ]
@@ -1023,6 +1007,13 @@
    "source": [
     "plt.plot(sort(sample_pol_length),sort(delta_ts))\n",
     "plt.loglog()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## very roughly estimating the slope of the above log-log plot gives the exponent in $O(n^p)$."
    ]
   },
   {
