added polynomial solver for commensurate delays

--- a/commensurate_roots.ipynb
+++ b/commensurate_roots.ipynb
@@ -1035,8 +1035,40 @@
     }
    ],
    "source": [
+    "\n",
     "(np.log(delta_ts[-1])-np.log(delta_ts[0])) / (np.log(sample_pol_length[-1]) - np.log(sample_pol_length[0]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 592,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=float64)"
+      ]
+     },
+     "execution_count": 592,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([[]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
