added perturbations to the delays stored in a separate data structure in the Hamilotnian class. Also fixed a tiny bug in how the Hamiltonian is set up in tests and in the README file

--- a/Notes_modifying_delays.ipynb
+++ b/Notes_modifying_delays.ipynb
@@ -1564,13 +1564,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making a function from the expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1734,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "func = sp.lambdify((z,Ts,Ts_Delta),sol2) #(1,(1,2,3,4),(1,2,3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1731,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tuple_sample = (D_sample[z],tuple([D_sample[T] for T in Ts]),tuple([D_sample[T_d] for T_d in Ts_Delta]) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1736,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAKYAAAAPBAMAAACctaliAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEM3dMpmJZlQi77ur\nRHZNUE1LAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAC0klEQVQ4EbVUz2sTQRh9m6S7m1+6WPTQg0nB\ng4eKoaIoFlwQPQkNhQa1Ld1KTQ+WZk8WerB7FqG5VNBLq3hoFTGgF63gIgbBSxe8ebCxWKEg1qRq\n1Vbjm5lV9A/wg53vzXvfvMy3MxsgDK1w0RZQZX1smGi0HIq73w0A030PhEwy8iZ2OpR3jgwj1lUo\nFhEvXvBwvFosOuEiIOJpR8REZm0fetDmxudJXLaAPFKe5qMUKDLRbDqhvBetZaPZbG5hGuYGJgl9\nYSNjAjgngMzJPBbwAqhCqy5aMF3EsykLiVlFRkZXoZAxCz3bwnZ8rHlYxxkgpfzE+BiY4o5UXhJN\nN4AS05oFvQItl8gh9UmRcpmUkz7Mug7oNl4FWgMOMMw1YWwBSx6xzI8ItE362dIzvWnpbqROT0UK\nT4W2+0h/5ew1H9E7kK4JKEP7TM8aS2VunFwJcJP7DKQnFjdGRFW0rsjU+IqtUCaP9E8qFSG3OhyS\nAqmIfwG6HUDmoYaLOdH4fld56s12UbbkKDJpxX8oNOMgxpU663D1oMVR/rgophf3Jz1FHmpaOGtF\nambJU55XXn4PWNTFa6FI3FdoJi89M8IC+l32+ZFgxwERe/7tfR2YDHDpbcmWnoaPtRtAS571isRg\nWaKw92UKjNsWtmUlUgPPZsojlLmTni4nvEfi3BNlxHgSK6py0Xqq3jRlnpFJ5SiVa8ATD9GKKpLj\nAm3owHvJzKvJfQIdfOgpWnsOMy/WCZKnNyhqO5CswKhD40bA90XPjE/4O3jXewSWuZvvExPl2DcS\nap94iBPAqiLzQKdCxixasojxEHAHOFZGN7U/EfW0W8hkIXPK0eawbO1wKdMz3Q6jFj9U7M8pchrG\nfCgfRpsNU3iOw+StmvrbUxt7byPqQ2ac77eh9/KPA/33OlycKgwgwk85p8h4ocqPS8q7PjzjpZlj\nYbq3LwCue4T/IX4B+MYEH1jcieYAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$-0.0691829590737$$"
+      ],
+      "text/plain": [
+       "-0.0691829590737"
+      ]
+     },
+     "execution_count": 1736,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "func(*tuple_sample)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "map()"
+   ]
   },
   {
    "cell_type": "code",
