added an option to perturb roots by minimziing functional, included ipython notebook for explanations

--- a/consolidated_taylor_perturbation.ipynb
+++ b/consolidated_taylor_perturbation.ipynb
@@ -453,24 +453,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 161,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "args = (1,2,(3,4,5,6))"
+    "ls = [[0.]*5]*5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 163,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "blah(args)"
+    "ls[1][2] = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABWUAAAAUBAMAAAAXe0LaAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdt3NMolEEJlmVCLv\nu6sHwGgPAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAGQklEQVRoBd1asYpkVRCtnt3etntcnO1YDNpl\nBUUZZCNB6NDMFmXBQOg/cBQEA2EGxHxhMVJwAjPBndRoNzBV5gfUEUxMRkREEV2td9873XXurVfd\njdDzmJecd+tU1T237mG2p2dlfLv39FQu4hm+OC+3vSgx926VWmR82wluIeSJuajBdO2WKj13pD+X\nwUcfT6u7ANK9vP/mG2kNJFJe4aWu0ARoExBLqBsXzwoxVF8UO2IgGmhrEEt4xzLNu8YoJ0uJOJGr\nR1l6OBjeyBGzYjBcn+/sDCaaJHFduyXVkzx75XjwXHVOIJ35JXn3pAoAiZTneakrNAHaBMQStkyD\ncmzxit5Kl2IgGmj7IZbQsYnOZnFo5LbWWyK975zmoehgvJEjRoe1fn2+szOYqBlxXbslePZTkder\ncwLtmYcPpb+vAaDlRHrf8FpXaAK0CYglbJkG5djiFb09MRANtO0Qq9GxiXqWc2z1ciDIYVaeLDwb\nHQxNWsXosNavz6RcqluCZ78XuX+gBwXaM18/k9EfGgBaTuSrl3mtKzQB2gTEErZ4lnJs8YrenhiI\nBtp2iNXoe5ZzbPVyIMhhdvde4dnoYGjSKkaHtX49S/EGEzajjbp2S/DsI5G3j/WgQHvmJ87k2l8a\nAFpOZFZ6Fk2AtgCxhC3ToBxbrO8R54mBaKBth1iNvmc5x1YvB4IcZvtXCs9G4tGkVYwOa/16luIN\nJmxGG3XtlhrPDv5Uz+7pb08N0pEPj+TarxoBEjk8KTyLJkCbj1iN/jQ4x1YvBSKHWUcMRANtAWI1\n+p7lHFu9HAhymP2k8CxEAykfTVrF9OeoAwb1ROmnmMt0S41nd38XeXUmAqQjP5jJVeUFSOQ7UngW\nTYA2H7Eafc9yjq1eCkQOs44YiAbaAsRq9D3LObZ6ORDkEDvYKzwL0UDKR5NWMf056oBBPVEizmDQ\nBGgrEKuxa7cEz+rP1+TZBu0B5MFR49kGiZw5ng2a7RLXMg3Kod2E65nTfwFLMZF45lo8Gxye6zMx\nfSk9Gxwsm7IjRj27fn0mxhlM1Iy5rt1S41n8awOkIx8Gnw1G09ImaAK0zRCr0Z8G59jqFZ8NPDGR\neOYcm+j3BpzDYiJOPi89Gx0s28gR8z8+G3iDicQw17VbajxbfSC/f6w3ArSXo78VjJrfwRJa7j0p\nPbto4jVDLKE/jfXrrRJ998RE4plzbKKe5RzeMOIGs9Kz4cG4mSNGh0XDYy2hUG8wYTPaqGu3BM9+\nJ/LZgU4BaAdy/VSG6buuBi335fn53z/aQPWOJkDLI5awZRqUY4tX9PbEROKZc2yinuUcFhNxo/Pz\nX77V32rpiQ7GzRwxOqz162lb8QYTNqONunZL8Kx+W/1hdU6gPbN+y/3YvgaAltN3928Krc2wQcKW\naVBOtlvEeWIgGmjbIVajY5P6bwqth+d62zm9P36ahyLx3MwRo8Navz7f+TLdEjy7czz4Wg73BUhn\nflY+mA5+EwESKf9IxdkHTYCtXPKs7mofjaEOaGnEgJbT91IMRANtAWIVqj/143J2Eo3ZnJyOOP36\n9rSaqH0gGmg52sgTs2IwVJ8L9QYDEUArBrGEXbsl1VP/H5nXnprKzpkMEj5j9evnxBs/ibzQ4OSA\nybf+/VmyWN3Eb0ZcmsYO76YxysnoiBNxxETiiUs/2rKTaIxyMjripP/Do7ubiKdmjpgVgwmFeoOJ\nJklc125J9STPsg+/4CWtRie0TAsvtsgKmqVpCCfUsUW1ZLQh9JVLay4SE3HJJllCipktM9owIi7n\nCURVxDliNhqMJ8aLQYs7yYbs2i2pHsezs8VRypd+GRIvtkgLmtXT4ITiaphetE0vHheJibhkkywh\n92xGkxiX8wSiKuIcMRsNxhPjxaBFv9pufbp2S6qn9Oxgr1V/9SeV8vFiyIqapWlkCfnVZDTaJnS5\nSEzEJZtkCblnM5rEeJwrsKmKOL0UfbjjJoPJSusduV2jooFITNduSfWUnh3yeXh1l5dp5cWQFjVL\n08gS8qvJaLRN6HKRmIhLNskScs9mNInxOFdgUxVxtWe54yaDES6td/RiOEEkpmu3pHrGN3uTKbRv\nFXuTeblfbzItg1uIjG85m4xvOsEthDwxvcl0CzuXW3TtllTPf6rGZZTdjKumAAAAAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$\\left [ \\left [ 0.0, \\quad 0.0, \\quad 4, \\quad 0.0, \\quad 0.0\\right ], \\quad \\left [ 0.0, \\quad 0.0, \\quad 4, \\quad 0.0, \\quad 0.0\\right ], \\quad \\left [ 0.0, \\quad 0.0, \\quad 4, \\quad 0.0, \\quad 0.0\\right ], \\quad \\left [ 0.0, \\quad 0.0, \\quad 4, \\quad 0.0, \\quad 0.0\\right ], \\quad \\left [ 0.0, \\quad 0.0, \\quad 4, \\quad 0.0, \\quad 0.0\\right ]\\right ]$$"
+      ],
+      "text/plain": [
+       "[[0.0, 0.0, 4, 0.0, 0.0], [0.0, 0.0, 4, 0.0, 0.0], [0.0, 0.0, 4, 0.0, 0.0], [0\n",
+       ".0, 0.0, 4, 0.0, 0.0], [0.0, 0.0, 4, 0.0, 0.0]]"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ls2 = np.zeros((5,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ls2[2,3] = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  4.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.,  4.,  0.])"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls2[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "delays = [1,4,5,6,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQ8AAAAUBAMAAABhZ6XhAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdt3NMolEVO8Qq5lm\nIrurE6D6AAAACXBIWXMAAA7EAAAOxAGVKw4bAAACvklEQVRIDcVUPYtTQRQ9m4/NvjXJxq38QIRV\nEAUhiCBYBf+AEV0LWTD/wBQWNhJBK0GMgiBYbECr3WIDsgiCbEAEC8WUgsU+LC38QFRci3jvnXcz\nMy+TV+oUcz/OPecdJpPB4kn8/1U+0cJFa+PRygVbjLNCn9No81Vj3EqS/N7CM05DmBlRRY0JUcKZ\n9eXlprKLxsi1rkCncH/ojpo8F3PMt6Pjprb73GjESkEMYFFV1Gi5wLvRaNRTthiJ1jfESPkGinV3\n1OR7Yo6vgfOmtnv+0gEpQpiIqqJGS6XsBTDPDWEnJ3JQjFR7KP32ZrmovIw5fAI6MsVFskSH8hAG\nkKgqalSixCYgN0HYnpGFHmZ/ebNcFPMxhx3gSpsTZ6mRECZGVFGjw+V0tsa7sD0jq33MfmPIW2/F\nSPSHjAjPAeff7G9QGcTEiCpqdLicVnkzbM/IdhOFH4y5K6qJkQoBZ+kwvVXtVn5SI4iJEVXU6LGB\nFa4N2zfSDxgpwhihE5kwQjIfWSqM0R3ZThQ18oftir5ybtiekeABXjVGphw/toZ6uPYDSUZGVFGj\nPzNT5zrw09CVKqUva9Q0RvhKddq+EB4Dl1vUC2F6WUUxpAyYB8qwvROpxiin/76ltbWN2zX62Gd6\ngbopIzeBLe6FMDGiihp9/mpPamF7RujZ2VX3Z7mai3mnZ+cpR3f1gUNchzAxoooaXTLdOeIr2xqJ\nvgNH8LDB0V8LMVbryLWjWxzd9QHlO9MwMTJWDCp3yIgqGyPP754e4BjwYPcTYKnrfosetC87g1wP\n0bl9DeSOelhlc72LKRhEVBSnKb9v0z1JlJMTceVLQ7dK5ddTtVtmYTKXpRwwUnTF03kz3XDqLEzG\nspQDRu452uk0qqU7ts7CzFSWcsDIwGpPZOWJjm1kYWZqYIcnMjKyeHii++8bM0utvzN77uYoHVm8\nAAAAAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$\\left [ 1.0, \\quad 4.0, \\quad 5.0, \\quad 10.0, \\quad 7.0\\right ]$$"
+      ],
+      "text/plain": [
+       "[1.0, 4.0, 5.0, 10.0, 7.0]"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(sum,zip(ls2[2],delays))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAACIAAAAPBAMAAABzWwAZAAAAIVBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAADdcGRXAAAACnRSTlMAVO8Qq5l2zWbd0hufRgAAAAlwSFlzAAAOxAAA\nDsQBlSsOGwAAADpJREFUGBljYMAEjMoQMTANIkxCFoNFwDSEwwYRYQDTCAKoDMEZeDVWBUjuYXVa\n7sHA6cAApsEEhtcBrYgcUf0WzaQAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$1.11$$"
+      ],
+      "text/plain": [
+       "1.11"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(1.111111,2)"
    ]
   },
   {
